--- a/Credit_Card_Fraud_.ipynb
+++ b/Credit_Card_Fraud_.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "DNmhFs54CYbr"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "5abRvhVsCt59"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
         "id": "PB3e5KRvCy1H",
         "outputId": "d172e9f1-91b5-4b5a-8cb1-85c88b85d4a3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -744,7 +744,7 @@
         "id": "El7RPYyFC7hD",
         "outputId": "e5e9d101-ef4c-4513-a0a1-60da269d7999"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,12 +808,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 951
         },
         "id": "mNjA2PhaDW7v",
         "outputId": "31385a02-126b-41c6-c747-380e69b303d7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -867,7 +867,7 @@
         "id": "dcA-lVFUDrrX",
         "outputId": "e13e269c-9813-4a24-fc10-f0d5838c0caa"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1395,7 +1395,7 @@
       "metadata": {
         "id": "unS21GUGEaUv"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1411,7 +1411,7 @@
         "id": "Uy7hDdVEFUmy",
         "outputId": "bda89c56-bc55-45a6-d663-9c237bc5fc15"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1443,7 +1443,7 @@
       "metadata": {
         "id": "R75jtu3HFelK"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1459,7 +1459,7 @@
         "id": "Fa-u0d-KGqqI",
         "outputId": "773d6839-4dd2-4cb2-e080-f401a2581827"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2115,7 +2115,7 @@
       "metadata": {
         "id": "WydjoVa1ILQ7"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2126,7 +2126,7 @@
       "metadata": {
         "id": "eAkzLVISImbt"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2142,7 +2142,7 @@
         "id": "5CKW5fplJLWX",
         "outputId": "637702cb-50c0-4b51-a38c-31718ac74c0b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2211,7 +2211,7 @@
         "id": "layw-XAeJOWR",
         "outputId": "8d4e59bd-9162-4792-d563-060ca1884774"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2235,7 +2235,7 @@
       "metadata": {
         "id": "_4OfwyKiJed8"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2250,7 +2250,7 @@
         "id": "WGcnXRuKKfyM",
         "outputId": "5c01fcae-3a16-430b-a171-25e078b69719"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2279,7 +2279,7 @@
         "id": "ed8ndJV9LAMl",
         "outputId": "b0652365-f21a-49d0-e8e6-d87607a5fb77"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2307,7 +2307,7 @@
         "id": "TzhSwi0ULX-M",
         "outputId": "841fa64b-7bf7-45ad-c8b1-a29d69f35bb3"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2332,7 +2332,7 @@
       "metadata": {
         "id": "WQAjR0ELBubs"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2349,7 +2349,7 @@
       "metadata": {
         "id": "jgiiD6Z3DiWH"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2365,7 +2365,7 @@
         "id": "cbWwGD5bF4aF",
         "outputId": "10159879-b9fe-4dbb-ea0b-47c1e0a471c3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2399,13 +2399,12 @@
       "cell_type": "code",
       "source": [
         "def neural_net_predictions(model,x):\n",
-        "  return (model.predict(x).flatten()>0.5).astype(int)\n",
-        ""
+        "  return (model.predict(x).flatten()>0.5).astype(int)\n"
       ],
       "metadata": {
         "id": "3K61r70aJ9l9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2420,7 +2419,7 @@
         "id": "r_BeCFLEXbcM",
         "outputId": "f4798c21-2714-4094-a04d-3ab0dd3ce847"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2453,7 +2452,7 @@
         "id": "i1eZ4zPAYl7I",
         "outputId": "bbb7d049-8f25-492a-acb1-3c4a11172a59"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2481,7 +2480,7 @@
       "metadata": {
         "id": "B9uMgVenY1ng"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2498,7 +2497,7 @@
         "id": "wure_7DQZjGh",
         "outputId": "64c5d1d7-06fb-4dc9-c0bd-3a6fa2426ea6"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2519,7 +2518,7 @@
       "metadata": {
         "id": "umg7TTCOZwR2"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2536,7 +2535,7 @@
         "id": "Ryu6PEdeaZ_C",
         "outputId": "7f48330d-ae42-4c9d-a99f-843a5202e6a4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2570,7 +2569,7 @@
         "id": "rCY2faaqa16c",
         "outputId": "c4241e04-2c55-4588-d6b4-00668411ede6"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2597,7 +2596,7 @@
       "metadata": {
         "id": "N24hrC-Mb1Qa"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2614,7 +2613,7 @@
         "id": "sebao1Q-fDPm",
         "outputId": "6d02b250-2c2d-4013-ba44-4641245f56c3"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2649,7 +2648,7 @@
         "id": "XiHW8YnogRDG",
         "outputId": "6a0eb81a-fc20-4d2d-88f1-95e491245788"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2676,7 +2675,7 @@
       "metadata": {
         "id": "61rLM7DMgrYf"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2692,7 +2691,7 @@
         "id": "MuAytoMLg5s2",
         "outputId": "db68391f-8e11-4477-96bb-200e2793b843"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2756,7 +2755,7 @@
       "metadata": {
         "id": "fQ6wNpsCg90g"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2772,7 +2771,7 @@
         "id": "tXjvhJxfhDPB",
         "outputId": "1f2b2182-021c-4384-decb-e36b503e2047"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3418,7 +3417,7 @@
       "metadata": {
         "id": "DnU2ISpohEX7"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3433,7 +3432,7 @@
         "id": "5t5U4rdLh_Zp",
         "outputId": "6463ac00-3df2-40e2-cd5c-3cc9af5f8fac"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3459,7 +3458,7 @@
         "id": "OmaSr2jgiI46",
         "outputId": "6df11273-7f27-47e7-b152-ac375a8102af"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3495,7 +3494,7 @@
         "id": "pxXQB1H_iao3",
         "outputId": "d007beb2-5d13-4854-f13e-0535f1f8cea6"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3521,7 +3520,7 @@
         "id": "NJHNI23vi6n1",
         "outputId": "c53ba909-7701-4f6a-e730-6b4d3e35ba87"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3559,7 +3558,7 @@
         "id": "jUnyE1_8jJI9",
         "outputId": "6d816f2f-20fc-4802-8235-ce946832af56"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3671,7 +3670,7 @@
         "id": "AXTld8KjkRnm",
         "outputId": "c0b30823-4956-4493-a54e-2803ef0d5dd9"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3783,7 +3782,7 @@
         "id": "554L2kk-k2M2",
         "outputId": "0e55cf5c-858e-46aa-eda7-67434b7c427c"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3817,7 +3816,7 @@
         "id": "R4SgfzrglM1U",
         "outputId": "da4d6a23-5d7d-4d91-e881-59d72319900b"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3850,7 +3849,7 @@
         "id": "UJC-Mdr9lkxH",
         "outputId": "48f84001-ad80-4f25-c289-8a552f744fc7"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3881,7 +3880,7 @@
         "id": "JSnfYXHMmji4",
         "outputId": "7b8c57e9-f672-40f1-9bb1-55e5e7f521f1"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3974,7 +3973,7 @@
         "id": "An1E4AEbnOLh",
         "outputId": "24494347-679a-4dd5-fe82-1430f13d5c47"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3992,9 +3991,128 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "pip freeze > requirements.txt"
+      ],
       "metadata": {
         "id": "iul2vJwHoOaw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ngrok config add-authtoken 330wXClxnTKco9WrtH0iMmz38p7_MDWyPQY4uqAduQZ2EUKN"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0g-vUcm50LVM",
+        "outputId": "247c3035-bf60-4776-9b5e-81df500fabb5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Authtoken saved to configuration file: /root/.config/ngrok/ngrok.yml\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyngrok import ngrok\n",
+        "ngrok.kill()  # closes all existing tunnels\n"
+      ],
+      "metadata": {
+        "id": "SVW6x1h_1Ja1"
+      },
+      "execution_count": 119,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Save model (run in the same Colab session where `shallow_nm` is defined/trained) ---\n",
+        "shallow_nm.save('shallow_nm.keras')   # saves HDF5/TF SavedModel format depending on keras version\n",
+        "print(\"Saved shallow_nm.keras\")\n"
+      ],
+      "metadata": {
+        "id": "ChR-Tr7BJxFf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b056cd73-b8c5-4cb1-8dc1-14a123addb7d"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saved shallow_nm.keras\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1) Install requirements (run once)\n",
+        "!pip install -q streamlit pyngrok pandas scikit-learn matplotlib seaborn tensorflow\n"
+      ],
+      "metadata": {
+        "id": "97amg2c0SNTy"
+      },
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2) Launch Streamlit app and ngrok tunnel (run after the install completes)\n",
+        "from pyngrok import ngrok\n",
+        "import subprocess, time, os, signal\n",
+        "\n",
+        "# Kill existing tunnels/processes if present\n",
+        "ngrok.kill()\n",
+        "\n",
+        "# Start streamlit\n",
+        "proc = subprocess.Popen([\"streamlit\", \"run\", \"app.py\", \"--server.port\", \"8501\"], stdout=subprocess.PIPE, stderr=subprocess.STDOUT)\n",
+        "\n",
+        "time.sleep(4)\n",
+        "public_url = ngrok.connect(8501)\n",
+        "print(\"Open this URL to view the dashboard:\\n\", public_url)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k4qZDZU-Tptx",
+        "outputId": "69a8360b-b704-4e13-f332-0ffa919114cf"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Open this URL to view the dashboard:\n",
+            " NgrokTunnel: \"https://463135ebbcce.ngrok-free.app\" -> \"http://localhost:8501\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ufGolkZ5Yuot"
       },
       "execution_count": null,
       "outputs": []
